--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,49 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../static/styles/style.css">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-        }
-
-        .blur-background {
-            margin: 0;
-            padding: 0;
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            background: url('../images/background.jpg'); /* Arkaplan resminin yerine kendi resminizi ekleyin */
-            background-size: cover;
-            background-position: center;
-            filter: blur(5px); /* Arkaplanı burada bulanıklaştırın */
-            z-index: -1;
-        }
-
-        .container {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            margin: 0;
-            padding: 0px;
-            z-index: 1;
-        }
-
-        .col {
-            background-color: rgba(255, 255, 255, 0.8); /* Arkaplan rengini ayarlayın */
-            padding: 30px;
-            border-radius: 10px;
-        }
-    </style>
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/style/index.css">
 
     <title th:text="${pageTitle}">Uçuş Ara</title>
+    <script src="/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <div class="blur-background"></div>
@@ -54,24 +16,30 @@
 
     </div>
     <div class="col-md-10">
+        <h1 class="h1 display-1 title">Uçuş Ara</h1>
         <div class="col">
-            <!-- second div --><form action="http://localhost:8080/searchFlights">
-            <div class="row">
-                <div class="col-md-4">
-                    <input type="text" class="form-control" id="departureAirport" name="departureAirport" placeholder="Nereden?">
-                </div>
+            <!-- second div -->
+            <form action="http://localhost:8080/searchFlights">
+                <div class="row">
+                    <div class="col-md-4">
+                        <input type="text" class="form-control" id="departureAirport" name="departureAirport"
+                               placeholder="Nereden?">
+                    </div>
 
-                <div class="col-md-4">
-                    <input type="text" class="form-control" id="arrivalAirport" name="arrivalAirport" placeholder="Nereye?">
-                </div>
+                    <div class="col-md-4">
+                        <input type="text" class="form-control" id="arrivalAirport" name="arrivalAirport"
+                               placeholder="Nereye?">
+                    </div>
 
-                <div class="col-md-4">
-                    <input th:value="${today}" th:min="${today}" th:max="${maxYear}" type="date" class="form-control" id="departureDate" name="departureDate" value="2024-01-01" min="2024-01-01" max="2025-01-01" /> <br><br>
-                </div>
-                <input type="submit" class="btn btn-primary mb-2" value="Uçuş Ara">
+                    <div class="col-md-4">
+                        <input th:value="${today}" th:min="${today}" th:max="${maxYear}" type="date"
+                               class="form-control" id="departureDate" name="departureDate" value="2024-01-01"
+                               min="2024-01-01" max="2025-01-01"/> <br><br>
+                    </div>
+                    <input type="submit" class="btn btn-primary mb-2" value="Uçuş Ara">
 
-            </div>
-        </form>
+                </div>
+            </form>
 
         </div>
     </div>
@@ -79,8 +47,5 @@
 
     </div>
 </div>
-
-<!-- Bootstrap JS ve Popper.js eklemeyi unutmayın -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
