"7.0.0 Added AirportController and search bar suggestions."

--- a/src/main/resources/static/style/index.css
+++ b/src/main/resources/static/style/index.css
@@ -17,7 +17,7 @@ body {
     background: url('/images/background.jpg');
     background-size: cover;
     background-position: center;
-    filter: blur(5px);
+    filter: blur(4px);
     z-index: -1;
 }
 
@@ -26,12 +26,12 @@ body {
     justify-content: space-between;
     width: 100%;
     margin: 0;
-    padding: 0px;
+    padding: 0;
     z-index: 1;
 }
 
 .col {
-    background-color: rgba(255, 255, 255, 0.8); /* Arkaplan rengini ayarlayın */
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 30px;
     border-radius: 10px;
 }
